# artcraft

./: .gitignore  CLAUDE.md  Cargo.toml
crates/api_clients/fal_client/: Cargo.toml
crates/api_clients/fal_client/src/requests/: mod.rs
crates/api_clients/fal_client/src/requests/api/image/: mod.rs
crates/api_clients/fal_client/src/requests/api/image/angle/: mod.rs
crates/api_clients/fal_client/src/requests/api/image/background/: mod.rs
crates/api_clients/fal_client/src/requests/api/image/edit/: mod.rs
crates/api_clients/fal_client/src/requests/api/image/edit/flux_1_dev_edit_image/: api.rs  (+2 more)
crates/api_clients/fal_client/src/requests/api/image/text/: mod.rs
crates/api_clients/fal_client/src/requests/core_api/: fal_request.rs
crates/api_clients/fal_client/src/requests/traits/: fal_endpoint_trait.rs
crates/api_clients/fal_client/src/requests/webhook/image/angle/: enqueue_flux_2_lora_edit_image_angle_webhook.rs  enqueue_qwen_edit_2511_edit_image_angle_webhook.rs
crates/api_clients/fal_client/src/requests/webhook/image/background/: remove_background_rembg_webhook.rs
crates/api_clients/fal_client/src/requests/webhook/image/edit/: enqueue_bytedance_seedream_v4_edit_image_webhook.rs  enqueue_bytedance_seedream_v4p5_edit_image_webhook.rs  enqueue_bytedance_seedream_v5_lite_edit_image_webhook.rs  enqueue_flux_1_dev_edit_image_webhook.rs  enqueue_flux_1_schnell_edit_image_webhook.rs  enqueue_flux_pro_kontext_max_edit_webhook.rs  enqueue_gemini_25_flash_edit_webhook.rs  enqueue_gpt_image_1_byok_edit_image_webhook.rs  enqueue_gpt_image_1_edit_image_webhook.rs  enqueue_gpt_image_1p5_edit_image_webhook.rs  enqueue_gpt_image_2_edit_image_webhook.rs  enqueue_nano_banana_2_edit_image_webhook.rs  enqueue_nano_banana_pro_edit_image_webhook.rs  enqueue_qwen_image_edit_webhook.rs  enqueue_seededit_v3_edit_webhook.rs
crates/api_clients/fal_client/src/requests/webhook/image/infill/: enqueue_flux_dev_juggernaut_infill_webhook.rs  enqueue_flux_pro_1_infill_webhook.rs
crates/api_clients/fal_client/src/requests/webhook/image/text/: enqueue_bytedance_seedream_v4_text_to_image_webhook.rs  enqueue_bytedance_seedream_v4p5_text_to_image_webhook.rs  enqueue_bytedance_seedream_v5_lite_text_to_image_webhook.rs  enqueue_flux_1_dev_text_to_image_webhook.rs  enqueue_flux_1_schnell_text_to_image_webhook.rs  enqueue_flux_pro_11_text_to_image_webhook.rs  enqueue_flux_pro_11_ultra_text_to_image_webhook.rs  enqueue_gemini_25_flash_text_to_image_webhook.rs  enqueue_gpt_image_1_byok_text_to_image_webhook.rs  enqueue_gpt_image_1_text_to_image_webhook.rs  enqueue_gpt_image_1p5_text_to_image_webhook.rs  enqueue_gpt_image_2_text_to_image_webhook.rs  enqueue_nano_banana_2_text_to_image_webhook.rs  enqueue_nano_banana_pro_text_to_image_webhook.rs
crates/api_clients/fal_client/src/requests/webhook/object/: enqueue_hunyuan3d_v3_image_to_3d_webhook.rs  enqueue_hunyuan3d_v3_sketch_to_3d_webhook.rs  enqueue_hunyuan3d_v3_text_to_3d_webhook.rs  enqueue_hunyuan_3d_21_image_to_3d_webhook.rs  enqueue_hunyuan_3d_2_image_to_3d_webhook.rs
crates/api_clients/fal_client/src/requests/webhook/video/image/: enqueue_hailuo_v2p3_fast_pro_image_to_video_webhook.rs  enqueue_hailuo_v2p3_pro_image_to_video_webhook.rs  enqueue_kling_3p0_pro_image_to_video_webhook.rs  enqueue_kling_3p0_standard_image_to_video_webhook.rs  enqueue_kling_v1p6_pro_image_to_video_webhook.rs  enqueue_kling_v2p1_master_image_to_video_webhook.rs  enqueue_kling_v2p1_pro_image_to_video_webhook.rs  enqueue_kling_v2p5_turbo_pro_image_to_video_webhook.rs  enqueue_kling_v2p5_turbo_standard_image_to_video_webhook.rs  enqueue_kling_v2p6_pro_image_to_video_webhook.rs  enqueue_pixverse_v5_image_to_video_webhook.rs  enqueue_seedance_1_lite_image_to_video_webhook.rs  enqueue_seedance_1_pro_image_to_video_webhook.rs  enqueue_seedance_1p5_pro_image_to_video_webhook.rs  enqueue_sora_2_image_to_video_webhook.rs  enqueue_sora_2_pro_image_to_video_webhook.rs  enqueue_veo_2_image_to_video_webhook.rs  enqueue_veo_3_fast_image_to_video_webhook.rs  enqueue_veo_3_image_to_video_webhook.rs  enqueue_veo_3p1_fast_first_last_frame_image_to_video_webhook.rs  enqueue_veo_3p1_fast_image_to_video_webhook.rs  enqueue_veo_3p1_first_last_frame_image_to_video_webhook.rs  enqueue_veo_3p1_image_to_video_webhook.rs
crates/api_clients/fal_client/src/webhook_api/: hydrate_webhook_contents.rs  mod.rs  parse_raw_webhook_payload.rs
crates/api_clients/fal_client/src/webhook_api/hydrated/: hydrated_webhook_contents.rs  mod.rs
crates/api_clients/fal_client/src/webhook_api/hydrated/success_case_extractors/: extract_image_payload.rs  extract_images_payload.rs  extract_model_glb_payload.rs  extract_model_mesh_payload.rs  extract_thumbnail_payload.rs  extract_video_payload.rs  mod.rs
crates/api_clients/fal_client/src/webhook_api/raw/: mod.rs  raw_webhook_payload.rs  webhook_error_type.rs
crates/api_clients/fal_client/test_data/webhooks/success/: images_payload_1.json  model_glb_urls_and_thumbnail_1.json  model_mesh_payload_1.json  video_payload_1.json
crates/service/job/gmicloud_job/: Cargo.toml
crates/service/job/gmicloud_job/config/: gmicloud-job.development.env
crates/service/job/gmicloud_job/src/: job_dependencies.rs  main.rs  main_loop.rs
crates/service/job/gmicloud_job/src/http_server/: run_http_server.rs
crates/service/job/gmicloud_job/src/process_job/: mod.rs  process_failed_job.rs  process_successful_job.rs
crates/service/job/seedance2_pro_job/: Cargo.toml
crates/service/job/seedance2_pro_job/src/: job_dependencies.rs  main.rs
crates/service/job/seedance2_pro_job/src/jobs/video_polling_job/: video_polling_main_loop.rs
crates/tools/servers/agent_notify_server/: Cargo.toml  README.md
crates/tools/servers/agent_notify_server/config/: notify_config.yaml
crates/tools/servers/agent_notify_server/src/: audio_player.rs  config.rs  main.rs  server_state.rs
crates/tools/servers/agent_notify_server/src/endpoints/: alert_handlers.rs  loop_handlers.rs  mod.rs  root_handler.rs  state_handler.rs  stop_handler.rs
crates/tools/servers/agent_notify_server/static/: index.html
(+767 files in other folders)
