[package]
name = "fal_client"
edition = "2021"
rust-version = "1.75" # MSRV: async traits
version = "0.0.1"
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
name = "fal_client"
path = "src/lib.rs"

[dependencies]
# cargo-hakari workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
errors.workspace = true
file_to_base64_url.workspace = true

# External
anyhow.workspace = true
futures.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
# Internal Dev
test_utils.workspace = true
test_data.workspace = true

# External Dev
# (None yet)
