[package]
name = "seedance2-pro-job"
edition = "2021"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[[bin]]
name = "seedance2-pro-job"
path = "src/main.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration = { workspace = true }

# Internal
actix_helpers.workspace = true
bootstrap.workspace = true
bucket_paths.workspace = true
cloud_storage.workspace = true
concurrency.workspace = true
easyenv.workspace = true
enums.workspace = true
errors.workspace = true
hashing = { path = "../../../lib/files/hashing" }
jobs_common = { path = "../../../lib/jobs_common" }
mysql_queries = { path = "../../../schema/database/mysql_queries" }
pager = { path = "../../../lib/pager" }
rootly_client.workspace = true
rootly_config.workspace = true
seedance2pro_client = { path = "../../../api_clients/seedance2pro_client" }
server_environment = { path = "../../../lib/server_environment" }
shared_env_var_config.workspace = true
tokens.workspace = true

# External
anyhow.workspace = true
chrono.workspace = true
log.workspace = true

sqlx = { version = "0.7.4", features = [ "mysql", "runtime-tokio-rustls", "chrono" ] }

# Runtime
tokio = { version = "1.40.0", features = ["macros", "sync"] }

# HTTP Client
reqwest.workspace = true

# HTTP Server
actix-web.workspace = true

# Serialization
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
